--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "http://stephgbzh.github.io/myapp",
+  "homepage": "https://stephgbzh.github.io/pronos-graph",
   "devDependencies": {
     "gh-pages": "^1.2.0"
   }
