--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "license": "GPL-3.0-or-later",
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
