--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,7 @@
       "type": "chrome",
       "request": "launch",
       "runtimeExecutable": "/snap/bin/chromium",
+      "timeout": 30000,
       "url": "http://localhost:3000",
       "webRoot": "${workspaceRoot}/src",
       "sourceMapPathOverrides": {
