--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
+    "react-tooltip": "^3.6.1",
     "recharts": "^1.1.0"
   },
   "scripts": {
