Use React-Bootstrap to have more mobile-friendly buttons

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "react": "^16.4.1",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "react-tooltip": "^3.6.1",
