--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://stephgbzh.github.io/pronos-graph",
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "eslint": "^5.4.0",
+    "eslint-plugin-react": "^7.11.1",
     "gh-pages": "^1.2.0"
   }
 }
