--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,15 @@
 {
-    "version": "0.2.0",
-    "configurations": [{
-      "name": "Chrome",
-      "type": "chrome",
-      "request": "launch",
-      "runtimeExecutable": "/snap/bin/chromium",
-      "timeout": 30000,
-      "url": "http://localhost:3000",
-      "webRoot": "${workspaceRoot}/src",
-      "sourceMapPathOverrides": {
-        "webpack:///src/*": "${webRoot}/*"
-      }
-    }]
-  }
+  "version": "0.2.0",
+  "configurations": [{
+    "name": "Chrome",
+    "type": "chrome",
+    "request": "launch",
+    "runtimeExecutable": "/usr/bin/chromium-browser",
+    "timeout": 30000,
+    "url": "http://localhost:3000",
+    "webRoot": "${workspaceRoot}/src",
+    "sourceMapPathOverrides": {
+      "webpack:///src/*": "${webRoot}/*"
+    }
+  }]
+}
