--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
         ],
         "no-unused-vars": ["warn", {
             "argsIgnorePattern": "^_"
-        }]
+        }],
+        "no-console": "warn"
     }
 }
