--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-eslint": "^8.2.6",
     "eslint": "^5.4.0",
     "eslint-plugin-react": "^7.11.1",
-    "gh-pages": "^1.2.0"
+    "gh-pages": "^1.2.0",
+    "merge": ">=1.2.1"
   }
 }
