--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "react": "^16.4.1",
-    "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4",
-    "react-tooltip": "^3.6.1",
-    "recharts": "^1.1.0"
+    "react": "^16.7.0",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.7.0",
+    "react-scripts": "2.1.3",
+    "react-tooltip": "^3.9.2",
+    "recharts": "^1.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,10 +21,16 @@
   },
   "homepage": "https://stephgbzh.github.io/pronos-graph",
   "devDependencies": {
-    "babel-eslint": "^8.2.6",
-    "eslint": "^5.4.0",
-    "eslint-plugin-react": "^7.11.1",
-    "gh-pages": "^1.2.0",
-    "merge": ">=1.2.1"
-  }
+    "babel-eslint": "9.0.0",
+    "eslint": "5.6.0",
+    "eslint-plugin-react": "^7.12.4",
+    "gh-pages": "^2.0.1",
+    "merge": "^1.2.1"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
